--- a/frontend/src/app/components/header/user-navbar/user-navbar.component.scss
+++ b/frontend/src/app/components/header/user-navbar/user-navbar.component.scss
@@ -15,6 +15,7 @@ nav {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: flex-start;
   transition: 0.25s ease-in-out;
 
   &.search-mode {
@@ -27,7 +28,6 @@ ul {
   padding: 0;
   list-style: none;
   width: 100%;
-  height: 100%;
   display: flex;
   flex-direction: row;
   align-items: center;
