--- a/frontend/src/styles/variables.scss
+++ b/frontend/src/styles/variables.scss
@@ -40,9 +40,7 @@ $app-font: "Source Sans Pro", -apple-system, BlinkMacSystemFont, "Segoe UI",
 $screen-sm: 768px;
 $scrollbar-width: 12px;
 $color-bar-height: 9px;
-$user-header-height: 60px;
-$user-header-height-mobile: 122px;
-$authenticated-header-height: 54px;
+$user-header-height: 62px;
 
 $max-page-width: 1200px;
 
